tests/Errors/Generic/Formatting/DisallowMultipleStatements/SameLine.php
<?php

declare(strict_types=1);

$foo = 'Hello'; echo $foo;
